k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: finacplus-devops
  labels:
    app.kubernetes.io/name: finacplus-devops-pipeline
