k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finacplus-devops-pipeline
  namespace: finacplus-devops
  labels:
    app.kubernetes.io/name: finacplus-devops-pipeline
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: finacplus-devops-pipeline
  ports:
    - name: http
      port: 80
      targetPort: http
